card with correct spacing

--- a/css/card.css
+++ b/css/card.css
@@ -1,47 +1,124 @@
-.card {
-    position: absolute;
-    width: 151px;
-    height: 24px;
-    left: 0px;
-    top: 0px;
+.text-half {
+    display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 10px;
+gap: 4px;
 
-    background: #b6b1b5;
-    border-radius: 20px;
+width: 200px;
+height: 55px;
+
+flex: none;
+order: 0;
+flex-grow: 0;
+}
+
+.name {width: 88px;
+    height: 15px;
+    
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    
+    color: #000000;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.department {
+    width: 144px;
+height: 16px;
+
+font-family: 'Open Sans';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 16px;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.card {
+    display: flex;
+flex-direction: column;
+align-items: flex-start;
+padding: 11px 10px;
+gap: 13px;
+
+position: relative;
+width: 290px;
+height: 136px;
+
+background: #E1B6E8;
+border-radius: 20px;
 }
 
 .topic-container {
-    width: 400px;
-    height: 100px;
-    border: 5px solid black;
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
-    flex-direction: row;
-    padding: 4px;
-    gap: 10px;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px 0px 1px;
+gap: 10px;
+
+width: 319px;
+height: 50px;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 1;
+flex-grow: 0;
 }
 
 .topic {
     display: flex;
 flex-direction: row;
 justify-content: center;
-align-items: left;
-padding: 2px 16px;
+align-items: center;
+padding: 5px 10px;
+gap: 10px;
 
 
 background: #9747FF;
 border-radius: 20px;
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
 }
 
 .topic-text {
-width: 108px;
-height: 16px;
-
-font-family: 'Open Sans';
-font-style: normal;
-font-weight: 40;
-font-size: 12px;
-line-height: 16px;
-
-color: #EEEEEE;
+    
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    
+    color: #EEEEEE;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
